[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microfarm_jwt"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "aiozmq",
  "pyjwt",
  "minicli",
  "msgpack"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "freezegun"
]

[project.scripts]
mfjwt = "microfarm_jwt.service:run"

[tool.setuptools.packages.find]
where = ["."]
